# git-credential-store-pathprefix-rs

./: Cargo.toml  README.md
.github/workflows/: rust-release.yml
src/: main.rs
